# hw_1

./: .coverage  .flake8  .gitignore  README.md  pocessing.py  pyproject.toml  widget.py
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_decorators.py  test_generators.py  test_homework.py  test_masks.py  test_processing.py  test_widget.py
